building the html layout

--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Manage landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="custom_properties.css">
+  <link rel="stylesheet" href="andyBellReset.css">
+  <link rel="stylesheet" href="./styles.css">  
 </head>
 <body>
 
-  Pricing
+  <header>
+    <nav class="nav">
+      <img src="./images/logo.svg" alt="">
+    </nav>
+  </header>
+
+
+  <!-- Pricing
   Product
   About Us
   Careers
@@ -92,10 +96,12 @@
 
   Copyright 2020. All Rights Reserved
 
-  
+   -->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script src="main.js"></script>
 </body>
 </html>
